cmd/platform/kubernetes/service/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-api-latest
  labels:
    micro: runtime
    name: api
    version: latest
  annotations:
    name: "api"
    version: "latest"
    source: "github.com/micro/micro"
    owner: "micro"
    group: "micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-api
      micro: runtime
  template:
    metadata:
      labels:
        name: micro-api
        micro: runtime
        version: latest
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9000"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-api
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
      - name: qcloudregistrykey
      containers:
      - name: micro
        args:
        - service
        - api
        image: mcbeam-hub.tencentcloudcr.com/wolfplus/mcbeam:mcbeam-0311
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: api-port
        readinessProbe:
          tcpSocket:
            port: api-port
          initialDelaySeconds: 5
          periodSeconds: 10
