cmd/platform/kubernetes/service/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-auth-latest
  labels:
    micro: runtime
    name: auth
    version: latest
  annotations:
    name: "auth"
    version: "latest"
    source: "github.com/micro/micro"
    owner: "micro"
    group: "micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-auth
      micro: runtime
  template:
    metadata:
      labels:
        name: micro-auth
        micro: runtime
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9000"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-auth
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      
      
      containers:
      - name: micro
        args:
        - service
        - auth
        image: mcbeam-hub.tencentcloudcr.com/wolfplus/mcbeam:mcbeam-v3-20210915-c20fc8328a272b63d03ca186bdbc996efb868948
        imagePullPolicy: Always
        ports:
        - containerPort: 8010
          name: auth-port
        readinessProbe:
          tcpSocket:
            port: auth-port
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: etcd-client-certs
          mountPath: "/certs/registry"
          readOnly: true
        - name: nats-client-certs
          mountPath: "/certs/broker"
          readOnly: true
        - name: nats-client-certs
          mountPath: "/certs/events"
          readOnly: true
        - name: cockroachdb-client-certs
          mountPath: "/certs/store"
          readOnly: true
      volumes:
      - name: etcd-client-certs
        secret:
          secretName: etcd-client-certs
      - name: nats-client-certs
        secret:
          secretName: nats-client-certs
      - name: cockroachdb-client-certs
        secret:
          secretName: cockroachdb-client-certs
          defaultMode: 0600
