cmd/platform/kubernetes/service/events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-events-latest
  labels:
    micro: runtime
    name: events
    version: latest
  annotations:
    name: "events"
    version: "latest"
    source: "github.com/micro/micro"
    owner: "micro"
    group: "micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-events
      micro: runtime
  template:
    metadata:
      labels:
        name: micro-events
        version: latest
        micro: runtime
      annotations:
        name: "events"
        version: "latest"
        source: "github.com/micro/micro"
        owner: "micro"
        group: "micro"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-events
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
      - name: qcloudregistrykey
      containers:
      - name: micro
        image: ccr.ccs.tencentyun.com/wolfplus/mcbeam:mcbeam-v3-202102021624
        imagePullPolicy: Always
        args:
        - service
        - events
        ports:
        - containerPort: 8080
          name: events-port
        readinessProbe:
          tcpSocket:
            port: events-port
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: etcd-client-certs
          mountPath: "/certs/registry"
          readOnly: true
        - name: nats-client-certs
          mountPath: "/certs/broker"
          readOnly: true
        - name: nats-client-certs
          mountPath: "/certs/events"
          readOnly: true
        - name: cockroachdb-client-certs
          mountPath: "/certs/store"
          readOnly: true
      volumes:
      - name: etcd-client-certs
        secret:
          secretName: etcd-client-certs
      - name: nats-client-certs
        secret:
          secretName: nats-client-certs
      - name: cockroachdb-client-certs
        secret:
          secretName: cockroachdb-client-certs
          defaultMode: 0600
