cmd/platform/kubernetes/service/gate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-gate-latest
  labels:
    micro: runtime
    name: gate
    version: latest
  annotations:
    name: "gate"
    version: "latest"
    source: "github.com/micro/micro"
    owner: "micro"
    group: "micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-gate
      micro: runtime
  template:
    metadata:
      labels:
        name: micro-gate
        micro: runtime
        version: latest
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9000"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-api
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      
      
      containers:
      - name: micro
        args:
        - service
        - gate
        image: mcbeam-hub.tencentcloudcr.com/wolfplus/mcbeam-dev:mcbeam-dev-20210827-fcae6b416dbab2091a7a423a6b203a8b4829ac8a
        imagePullPolicy: Always
        ports:
        - containerPort: 3250
          name: gate-port
        readinessProbe:
          tcpSocket:
            port: gate-port
          initialDelaySeconds: 5
          periodSeconds: 10
