cmd/platform/kubernetes/service/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-proxy-latest
  labels:
    micro: runtime
    name: proxy
    version: latest
  annotations:
    name: "proxy"
    version: "latest"
    source: "github.com/micro/micro"
    owner: "micro"
    group: "micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-proxy
      micro: runtime
      version: latest
  template:
    metadata:
      labels:
        name: micro-proxy
        micro: runtime
        version: latest
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9000"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-proxy
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      
      
      containers:
      - name: micro
        args:
        - service
        - proxy
        image: mcbeam-hub.tencentcloudcr.com/wolfplus/mcbeam-dev:mcbeam-dev-20210910-8d5aa7f0c662ec6cfaebf1b967fdff15362c86d1
        imagePullPolicy: Always
        ports:
        - containerPort: 443
          name: proxy-port
        readinessProbe:
          tcpSocket:
            port: proxy-port
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: etcd-client-certs
            mountPath: "/certs/registry"
            readOnly: true
      volumes:
        - name: etcd-client-certs
          secret:
            secretName: etcd-client-certs
