cmd/platform/kubernetes/service/router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-router-latest
  labels:
    micro: runtime
    name: router
    version: latest
  annotations:
    name: "router"
    version: "latest"
    source: "github.com/micro/micro"
    owner: "micro"
    group: "micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-router
      micro: runtime
  template:
    metadata:
      labels:
        name: micro-router
        micro: runtime
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9000"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-router
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
      - name: qcloudregistrykey
      containers:
        - name: micro
          args:
            - service
            - router
          image: ccr.ccs.tencentyun.com/wolfplus/mcbeam:mcbeam-v3-202011222324
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
              name: router-port
          readinessProbe:
            tcpSocket:
              port: router-port
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: etcd-client-certs
              mountPath: "/certs/registry"
              readOnly: true
            - name: nats-client-certs
              mountPath: "/certs/broker"
              readOnly: true
            - name: nats-client-certs
              mountPath: "/certs/events"
              readOnly: true
            - name: cockroachdb-client-certs
              mountPath: "/certs/store"
              readOnly: true
      volumes:
        - name: etcd-client-certs
          secret:
            secretName: etcd-client-certs
        - name: nats-client-certs
          secret:
            secretName: nats-client-certs
        - name: cockroachdb-client-certs
          secret:
            secretName: cockroachdb-client-certs
            defaultMode: 0600
