cmd/platform/kubernetes/service/runtime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-runtime-latest
  labels:
    micro: runtime
    name: runtime
    version: latest
  annotations:
    name: "runtime"
    version: "latest"
    source: "github.com/micro/micro"
    owner: "micro"
    group: "micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-runtime
      micro: runtime
  template:
    metadata:
      labels:
        name: micro-runtime
        micro: runtime
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9000"
    spec:
      serviceAccount: micro-runtime
      serviceAccountName: micro-runtime
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-runtime
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      
      
      containers:
      - name: micro
        args:
        - service
        - runtime
        image: mcbeam-hub.tencentcloudcr.com/wolfplus/mcbeam-dev:mcbeam-dev-20210811-674017d1aa55f365720c609f99e276b56821534d
        imagePullPolicy: Always
        ports:
        - containerPort: 8088
          name: runtime-port
        readinessProbe:
          tcpSocket:
            port: runtime-port
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: etcd-client-certs
          mountPath: "/certs/registry"
          readOnly: true
        - name: nats-client-certs
          mountPath: "/certs/broker"
          readOnly: true
        - name: nats-client-certs
          mountPath: "/certs/events"
          readOnly: true
        - name: cockroachdb-client-certs
          mountPath: "/certs/store"
          readOnly: true
        - name: gitee-ssh-private-key
          mountPath: "/root/.ssh/id_rsa"
          subPath: path/to/id_rsa
        - name: git-config
          mountPath: "/root/.gitconfig"
          subPath: path/to/.gitconfig
          readOnly: true
      volumes:
      - name: etcd-client-certs
        secret:
          secretName: etcd-client-certs
      - name: nats-client-certs
        secret:
          secretName: nats-client-certs
      - name: cockroachdb-client-certs
        secret:
          secretName: cockroachdb-client-certs
          defaultMode: 0600
      - name: gitee-ssh-private-key
        secret:
            secretName: gitee-ssh-private-key
            defaultMode: 0600
            items:
              - key: id_rsa
                path: path/to/id_rsa
      - name: git-config
        configMap:
          name: git-config
          items:
            - key: .gitconfig
              path: path/to/.gitconfig
