cmd/platform/kubernetes/service/store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-store-latest
  labels:
    micro: runtime
    name: store
    version: latest
  annotations:
    name: "store"
    version: "latest"
    source: "github.com/micro/micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-store
      micro: runtime
  template:
    metadata:
      labels:
        name: micro-store
        micro: runtime
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9000"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-store
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      
      
      containers:
      - name: micro
        image: mcbeam-hub.tencentcloudcr.com/wolfplus/mcbeam-dev:mcbeam-dev-20210908-8a87da28e966a90b00ca82e3dd24c073ff5e4552
        imagePullPolicy: Always
        args:
        - service
        - store
        ports:
        - containerPort: 8002
          name: store-port
        readinessProbe:
          tcpSocket:
            port: store-port
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: etcd-client-certs
          mountPath: "/certs/registry"
          readOnly: true
        - name: nats-client-certs
          mountPath: "/certs/broker"
          readOnly: true
        - name: nats-client-certs
          mountPath: "/certs/events"
          readOnly: true
        - name: cockroachdb-client-certs
          mountPath: "/certs/store"
          readOnly: true
      volumes:
      - name: etcd-client-certs
        secret:
          secretName: etcd-client-certs
      - name: nats-client-certs
        secret:
          secretName: nats-client-certs
      - name: cockroachdb-client-certs
        secret:
          secretName: cockroachdb-client-certs
          defaultMode: 0600
