cmd/platform/kubernetes/service/websocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: micro-websocket-latest
  labels:
    micro: runtime
    name: websocket
    version: latest
  annotations:
    name: "websocket"
    version: "latest"
    source: "github.com/micro/micro"
    owner: "micro"
    group: "micro"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: micro-websocket
      micro: runtime
  template:
    metadata:
      labels:
        name: micro-websocket
        micro: runtime
        version: latest
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9000"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - micro-api
                    - key: micro
                      operator: In
                      values:
                        - runtime
                topologyKey: "kubernetes.io/hostname"
      
      
      containers:
      - name: micro
        args:
        - service
        - websocket
        image: mcbeam-hub.tencentcloudcr.com/wolfplus/mcbeam:mcbeam-v3-20211022-b31ecd451433214ea9cd7499a6545ef7eec4ea0e
        imagePullPolicy: Always
        ports:
        - containerPort: 3251
          name: websocket-port
        readinessProbe:
          tcpSocket:
            port: websocket-port
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: etcd-client-certs
            mountPath: "/certs/registry"
            readOnly: true
      volumes:
        - name: etcd-client-certs
          secret:
            secretName: etcd-client-certs
