cmd/platform/kubernetes/service/proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-proxy
  namespace: default
  labels:
    micro: runtime
    name: proxy
    version: latest
spec:
  ports:
  - name: proxy
    port: 443
  selector:
    name: micro-proxy
    micro: runtime
    version: latest
