cmd/platform/kubernetes/service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  tls:
    - hosts:
        - "*.mcbeam.cc"
      secretName: mcbeam-certs
  rules:
    - host: "proxy.mcbeam.cc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: micro-proxy
              servicePort: 443
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ###开启跳转
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ###增加跨域以及转发头
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "User-Token,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,User-Authorization"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    ###限流
    nginx.ingress.kubernetes.io/limit-connections: "210"
    nginx.ingress.kubernetes.io/limit-rps: "210"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "5"

    # more_set_headers "mcb-authorization: $authorization";
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $tmp $http_authorization;
      proxy_set_header Mcb-Authorization $tmp;
      more_clear_input_headers authorization;
    #    proxy_set_header authorization: '';
    #  proxy_set_header geoip_city $geoip_city;
    #  proxy_set_header geoip_city_country_code $geoip_city_country_code;
    #  proxy_set_header geoip_region $geoip_region;
spec:
  tls:
    - hosts:
        - "*.mcbeam.cc"
      secretName: mcbeam-certs
  rules:
    - host: "api.mcbeam.cc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: micro-api
              servicePort: 443
    - host: "*.mcbeam.cc"
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: micro-http
              servicePort: 443
          - path: (/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: micro-api
              servicePort: 443
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - "*.mcbeam.cc"
      secretName: mcbeam-certs
  rules:
    - host: "*.mcbeam.cc"
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              serviceName: micro-http
              servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websocket-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #配置websocket 需要的配置
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "Upgrade";
spec:
  tls:
    - hosts:
        - "*.mcbeam.cc"
      secretName: mcbeam-certs
  rules:
    - host: "*.mcbeam.cc"
      http:
        paths:
          - path: /websocket
            pathType: Prefix
            backend:
              serviceName: micro-gate
              servicePort: 3250
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ws-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #配置websocket 需要的配置
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "Upgrade";
spec:
  tls:
    - hosts:
        - "*.mcbeam.cc"
      secretName: mcbeam-certs
  rules:
    - host: "*.mcbeam.cc"
      http:
        paths:
          - path: /websocket2
            pathType: Prefix
            backend:
              serviceName: micro-websocket
              servicePort: 3251
